--- a/project_manager/templates/layout.html
+++ b/project_manager/templates/layout.html
@@ -11,12 +11,12 @@
     <script src="{{ url_for('static', filename='semantic.min.js') }}"></script>
 </head>
 <body>
-    <div class="ui fixed menu">
+    <div class="ui top fixed borderless menu">
         <div class="ui container">
-        <a href="#" class="header item">
+        <a href="{{ url_for('home.index') }}" class="header item">
+            <i class="assignment icon"></i>
             Project Manager
         </a>
-        <a href="#" class="item">Home</a>
         <div class="ui simple dropdown item">
             Dropdown <i class="dropdown icon"></i>
             <div class="menu">
@@ -29,7 +29,7 @@
         </div>
         </div>
     </div>
-    <div class="ui main text container" style="margin-top: 112px">
+    <div class="ui container" style="padding-top: 112px">
         {% block content %}
         {% endblock %}
     </div>
